
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:paddingStart="@dimen/tinyPadding"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryText"/>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorSecondaryText">

            <EditText
                android:id="@+id/ipt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorAccent"
                android:hint="@string/email"
                android:drawableEnd="@drawable/ic_email_signin"
                android:drawablePadding="@dimen/padding"
                android:inputType="textEmailAddress"
                android:paddingBottom="@dimen/padding"
                android:textColor="@color/colorPrimaryText"
                android:textColorHint="@color/colorSecondaryText"
                android:textSize="@dimen/text_body_size" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorSecondaryText">

            <EditText
                android:id="@+id/ipt_pass_word"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorAccent"
                android:hint="@string/password"
                android:drawableEnd="@drawable/ic_key"
                android:drawablePadding="@dimen/padding"
                android:inputType="textPassword"
                android:paddingBottom="@dimen/padding"
                android:textColor="@color/colorPrimaryText"
                android:textColorHint="@color/colorSecondaryText"
                android:textSize="@dimen/text_body_size" />
        </android.support.design.widget.TextInputLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/text_incorrect"
        android:gravity="center"
        android:textColor="#cf3e3e"
        android:text="sdasd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:textSize="@dimen/text_body_size"
        android:visibility="invisible" />


    <TextView
        android:id="@+id/tv_new_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/padding"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"

        android:text="@string/creat_new_account" />


    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_margin="@dimen/margin"
        android:background="@drawable/selector_button"
        android:paddingEnd="@dimen/paddingExtra"
        android:paddingStart="@dimen/paddingExtra"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_subheading_size" />


</LinearLayout>
