<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLayoutBackground"
    android:fillViewport="true"
    android:orientation="vertical"
    android:scrollbarStyle="insideOverlay"
    android:scrollbars="vertical">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:weightSum="10">

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/iv_user_avatar"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin"
            android:src="@drawable/privateuser"
            app:civ_border_color="#b6b6b6"
            app:civ_border_width="2dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/personal"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryText"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_first_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColorHint="@color/colorSecondaryText">

                    <EditText
                        android:id="@+id/ipt_first_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorAccent"
                        android:hint="@string/first_name"
                        android:inputType="text"
                        android:paddingBottom="@dimen/padding"
                        android:textColor="@color/colorPrimaryText"
                        android:textColorHint="@color/colorSecondaryText"
                        android:textSize="@dimen/text_body_size" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_last_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColorHint="@color/colorSecondaryText">

                    <EditText
                        android:id="@+id/ipt_last_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorAccent"
                        android:hint="@string/last_name"
                        android:inputType="text"
                        android:paddingBottom="@dimen/padding"
                        android:textColor="@color/colorPrimaryText"
                        android:textColorHint="@color/colorSecondaryText"
                        android:textSize="@dimen/text_body_size" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorSecondaryText">

                <EditText
                    android:id="@+id/ipt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorAccent"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingBottom="@dimen/padding"
                    android:textColor="@color/colorPrimaryText"
                    android:textColorHint="@color/colorSecondaryText"
                    android:textSize="@dimen/text_body_size" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:textColorHint="@color/colorSecondaryText">

                <EditText
                    android:id="@+id/ipt_birthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorAccent"
                    android:focusable="false"
                    android:hint="@string/birthday"
                    android:inputType="date"
                    android:paddingBottom="@dimen/padding"
                    android:textColor="@color/colorPrimaryText"
                    android:textColorHint="@color/colorSecondaryText"
                    android:textSize="@dimen/text_body_size" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorSecondaryText">

                <EditText
                    android:id="@+id/ipt_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorAccent"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingBottom="@dimen/padding"
                    android:textColor="@color/colorPrimaryText"
                    android:textColorHint="@color/colorSecondaryText"
                    android:textSize="@dimen/text_body_size" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_password_repeat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorSecondaryText">

                <EditText
                    android:id="@+id/ipt_password_repeat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorAccent"
                    android:hint="@string/password_repeat"
                    android:inputType="textPassword"
                    android:paddingBottom="@dimen/padding"
                    android:textColor="@color/colorPrimaryText"
                    android:textColorHint="@color/colorSecondaryText"
                    android:textSize="@dimen/text_body_size" />
            </android.support.design.widget.TextInputLayout>

            <RadioGroup
                android:id="@+id/rg_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin"
                android:layout_marginTop="@dimen/margin"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorPrimary"
                    android:text="@string/gender_male"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/text_body_size" />

                <RadioButton
                    android:id="@+id/rb_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin"
                    android:buttonTint="@color/colorPrimary"
                    android:text="@string/gender_female"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/text_body_size" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding"
            android:paddingTop="@dimen/padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:text="@string/medical"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryText"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_nationality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorSecondaryText">

                <EditText
                    android:id="@+id/ipt_nationality"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorAccent"
                    android:focusable="false"
                    android:hint="@string/nationality"
                    android:inputType="text"
                    android:paddingBottom="@dimen/padding"
                    android:textColor="@color/colorPrimaryText"
                    android:textColorHint="@color/colorSecondaryText"
                    android:textSize="@dimen/text_body_size" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_ice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorSecondaryText">

                <EditText
                    android:id="@+id/ipt_ice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorAccent"
                    android:hint="@string/ice"
                    android:inputType="phone"
                    android:paddingBottom="@dimen/padding"
                    android:textColor="@color/colorPrimaryText"
                    android:textColorHint="@color/colorSecondaryText"
                    android:textSize="@dimen/text_body_size" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_insurance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorSecondaryText">

                <EditText
                    android:id="@+id/ipt_insurance_policy_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorAccent"
                    android:hint="@string/insurance_policy_number"
                    android:inputType="text"
                    android:paddingBottom="@dimen/padding"
                    android:textColor="@color/colorPrimaryText"
                    android:textColorHint="@color/colorSecondaryText"
                    android:textSize="@dimen/text_body_size" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_blood_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:textColorHint="@color/colorSecondaryText">

                <EditText
                    android:id="@+id/ipt_blood_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorAccent"
                    android:focusable="false"
                    android:hint="@string/blood_type"
                    android:inputType="text"
                    android:paddingBottom="@dimen/padding"
                    android:textColor="@color/colorPrimaryText"
                    android:textColorHint="@color/colorSecondaryText"
                    android:textSize="@dimen/text_body_size" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_med_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorSecondaryText">

                <EditText
                    android:id="@+id/ipt_med_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorAccent"
                    android:gravity="start"
                    android:hint="@string/med_info"
                    android:inputType="textMultiLine"
                    android:maxLines="5"
                    android:paddingBottom="@dimen/padding"
                    android:textColor="@color/colorPrimaryText"
                    android:textColorHint="@color/colorSecondaryText"
                    android:textSize="@dimen/text_body_size" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btn_save_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin"
            android:background="@drawable/selector_button"
            android:paddingEnd="@dimen/paddingExtra"
            android:paddingStart="@dimen/paddingExtra"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_subheading_size" />

    </LinearLayout>
</ScrollView>